# cookiecutter-python

./: README.md  cookiecutter.json
.github/workflows/: github-release.yaml
{{ cookiecutter.name }}/: MANIFEST.in  Pipfile  pyproject.toml
{{ cookiecutter.name }}/.github/workflows/: python-package.yaml
