[build-system]
requires = [
  "setuptools >= 45.0.0",
  "setuptools_scm[toml] >= 7.0.5",
  "wheel",
]
build-backend = "setuptools.build_meta"

[project]
name = "{{ cookiecutter.name }}"
dynamic = ["version"]
description = "{{ cookiecutter.description }}"
authors = [{ "name" = "{{ cookiecutter.author_name }}", "email" = "{{ cookiecutter.author_email }}" }]

readme = "README.md"
license = { text = "{{ cookiecutter.license }}" }

dependencies = []

[project.urls]
Homepage = "https://github.com/{{ cookiecutter.github_username }}/{{ cookiecutter.github_repository }}/"

[tool.setuptools.packages.find]
where = ["src"]
exclude = ["tests"]

[tool.setuptools_scm]

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = "--cov --cov-report term-missing"
